<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FrmLogin"
    tools:ignore="ScrollViewCount"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="543dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/login_top" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="32dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/TxtLogin"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/TxtInputMobileMessage"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/txtMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/TxtHintInputMobile"
                            android:background="@null"
                            android:drawableStart="@drawable/mobile_icon"
                            android:drawablePadding="8dp"
                            android:hint="@string/TxtHintInputMobile"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:textColor="@color/colorText"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.75dp"
                            android:layout_marginHorizontal="10dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/editText_error_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/TxtMobileNotValid"
                            android:textColor="@color/colorRed"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:visibility="gone"
                            tools:ignore="SmallSp">

                        </TextView>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_sendcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/background_button"
                        android:onClick="onclickBtnLogin"
                        android:text="@string/btnSendCode"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite2"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/TextTermsAccept"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>