<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FrmShowPrice">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_top"
        android:contentDescription="@string/topo" />

    <TextView
        android:id="@+id/txtSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/from"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/txtDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@+id/txtSource" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_request"
        android:layout_marginBottom="25dp"
        android:onClick="btnSubmitTrip"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/priceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="150000"
        android:textStyle="bold"
        android:textSize="55sp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDestination" />
</androidx.constraintlayout.widget.ConstraintLayout>