<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FrmInputActiveCode">

    <ImageView
        android:id="@+id/imgView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/input_active_code"
        android:onClick="onclickBackBtn"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
        android:layout_alignParentLeft="true" />
    
    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/input_active_code"
        app:srcCompat="@drawable/code"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="4dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/input_active_code"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/please_enter_activation_code_recived_by_sms"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/txtPincode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#000"
                android:inputType="number"
                app:itemCount="6"
                app:itemRadius="4dp"
                app:itemSpacing="6dp"
                app:itemWidth="36dp"
                app:itemHeight="36dp"
                app:lineColor="@color/colorPrimary"
                app:lineWidth="2dp"
                style="@style/PinWidget.PinView"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/txtYourNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/your_phone_number"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_sendcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_button"
                android:onClick="onclickBtnLogin"
                android:text="@string/activation_account"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite2"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/TextTermsAccept"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>